--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <h1>Emma Stowe</h1>
-<p>I care about running, math, and warm houses. My causes are learning things and helping people.</p>
+<!--<p>I care about running, math, and warm houses. My causes are learning things and helping people.</p>-->
 </body>
 </html>
