--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <body>
 <h1>Emma Stowe</h1>
 <!--<p>I care about running, math, and warm houses. My causes are learning things and helping people.</p>-->
+<img "olul.jpg"/>
 </body>
 </html>
