--- a/railroad.html
+++ b/railroad.html
@@ -1,7 +1,7 @@
 <html>
-  <body>
-    <h6>Emma Stowe</h6>
-    <h6>CSC265</h6>
-    <h6>February 5, 2019</h6>
-  </body?
+<body>
+<h6>Emma Stowe</h6>
+<h6>CSC265</h6>
+<h6>February 5, 2019</h6>
+</body>
 </html>
