--- a/railroad.html
+++ b/railroad.html
@@ -3,6 +3,6 @@
 <p>Emma Stowe</p>
 <p>CSC 265</p>
 <p>February 5, 2019</p>
-<img src="Pictures/olul.jpg"/>
+<img src="images/olul.jpg"/>
 </body>
 </html>
