--- a/railroad.html
+++ b/railroad.html
@@ -3,6 +3,7 @@
 <p>Emma Stowe</p>
 <p>CSC 265</p>
 <p>February 5, 2019</p>
-<img src="images/olul.jpg"/>
+<img src="images/olul.jpg"
+     alt="Ordered List Unordered List Railroad Diagram"/>
 </body>
 </html>
