--- a/railroad.html
+++ b/railroad.html
@@ -3,7 +3,7 @@
 <p>Emma Stowe</p>
 <p>CSC 265</p>
 <p>February 5, 2019</p>
-<img src="images/olul.jpg"
+<img src="Pictures/olul.jpg"
      alt="Ordered List Unordered List Railroad Diagram"/>
 </body>
 </html>
