--- a/railroad.html
+++ b/railroad.html
@@ -4,6 +4,6 @@
 <p>CSC 265</p>
 <p>February 5, 2019</p>
 <img src="Pictures/olul.jpg"
-     alt="Ordered List Unordered List Railroad Diagram"/>
+     alt="List Railroad Diagram"/>
 </body>
 </html>
