--- a/railroad.html
+++ b/railroad.html
@@ -3,7 +3,7 @@
 <p>Emma Stowe</p>
 <p>CSC 265</p>
 <p>February 5, 2019</p>
-<img src="file:\\\C:\Users\Emma Stowe\Documents\CSC 265\olul.png"
+<img src="olul.png"
      alt="List Railroad Diagram"/>
 </body>
 </html>
