--- a/railroad.html
+++ b/railroad.html
@@ -3,7 +3,7 @@
 <p>Emma Stowe</p>
 <p>CSC 265</p>
 <p>February 5, 2019</p>
-<img src="https://github.com/ehstowe/csc265/issues/1#issue-406465570"
+<img src="issues/1#issue-406465570"
      alt="List Railroad Diagram"/>
 </body>
 </html>
