--- a/railroad.html
+++ b/railroad.html
@@ -3,9 +3,9 @@
 <p>Emma Stowe</p>
 <p>CSC 265</p>
 <p>February 5, 2019</p>
-<img src="olul.png"
+<img src="images/olul.png"
      alt="List Railroad Diagram"/>
-<img src="definition.png"
+<img src="images/definition.png"
      alt="Definition Railroad Diagram"/>
 </body>
 </html>
