--- a/railroad.html
+++ b/railroad.html
@@ -3,9 +3,9 @@
 <p>Emma Stowe</p>
 <p>CSC 265</p>
 <p>February 5, 2019</p>
-<img src="images/olul.PNG"
+<img src="csc265/olul.PNG"      
      alt="List Railroad Diagram"/>
-<img src="images/definition.PNG"
+<img src="csc265/definition.PNG"
      alt="Definition Railroad Diagram"/>
 </body>
 </html>
