--- a/railroad.html
+++ b/railroad.html
@@ -3,7 +3,7 @@
 <p>Emma Stowe</p>
 <p>CSC 265</p>
 <p>February 5, 2019</p>
-<img src="olul.PNG" alt="List Railroad Diagram"/>
+<img src="csc265/olul.PNG" alt="List Railroad Diagram"/>
 <img src="csc265/definition.PNG" alt="Definition Railroad Diagram"/>
 </body>
 </html>
