--- a/railroad.html
+++ b/railroad.html
@@ -5,7 +5,7 @@
 <p>February 5, 2019</p>
 <img src="csc265/olul.PNG" 
      alt="List Railroad Diagram"/>
-<img src="csc265/definition.PNG" 
-     alt="Definition Railroad Diagram"/>
+<!--<img src="csc265/definition.PNG" 
+     alt="Definition Railroad Diagram"/>-->
 </body>
 </html>
