--- a/railroad.html
+++ b/railroad.html
@@ -4,8 +4,8 @@
 <p>CSC 265</p>
 <p>February 5, 2019</p>
 <img src="csc265/olul.png" 
-     alt="List Railroad Diagram"/>
+     alt="List Railroad Diagram">
 <img src="csc265/definition.PNG" 
-     alt="Definition Railroad Diagram"/>
+     alt="Definition Railroad Diagram">
 </body>
 </html>
