--- a/railroad.html
+++ b/railroad.html
@@ -3,7 +3,8 @@
 <p>Emma Stowe</p>
 <p>CSC 265</p>
 <p>February 5, 2019</p>
-<img src="images/olul.PNG" alt="List Railroad Diagram" />
-<img src="images/definition.PNG" alt="Definition Railroad Diagram" />
+<img src="images/olul.PNG" alt="" />
+<img src="images/definition.PNG" alt="" />
+<img src="images/table.PNG" alt=""/>
 </body>
 </html>
