--- a/railroad.html
+++ b/railroad.html
@@ -1,10 +1,14 @@
 <html>
 <body>
+  <h1>HTML Railroad Diagrams</h1>
 <p>Emma Stowe</p>
 <p>CSC 265</p>
 <p>February 5, 2019</p>
-<img src="images/olul.PNG" alt="" />
-<img src="images/definition.PNG" alt="" />
-<img src="images/table.PNG" alt=""/>
+  <h2>Ordered and Unordered Lists</h2>
+<img src="images/_list.PNG" alt="" />
+  <h2>Definition Lists</h2>
+<img src="images/_definition.PNG" alt="" />
+  <h2>Tables</h2>
+<img src="images/_table.PNG" alt=""/>
 </body>
 </html>
