--- a/railroad.html
+++ b/railroad.html
@@ -5,10 +5,10 @@
 <p>CSC 265</p>
 <p>February 5, 2019</p>
   <h2>Ordered and Unordered Lists</h2>
-<img src="images/_list.PNG" alt="" />
+<img src="images/list2.PNG" alt="" />
   <h2>Definition Lists</h2>
-<img src="images/_definition.PNG" alt="" />
+<img src="images/definition2.PNG" alt="" />
   <h2>Tables</h2>
-<img src="images/_table.PNG" alt=""/>
+<img src="images/table2.PNG" alt=""/>
 </body>
 </html>
